Edit the current position title in the internship.qmd to confirm if the github workflow integrated is truly working

--- a/open-positions/internship.qmd
+++ b/open-positions/internship.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Research intern"
+title: "Research internship by Isiaq"
 subtitle: "Research internship in Digital Dairy Management"
 execute:
   eval: false
