--- a/tutorials/teams-to-azure-blob.qmd
+++ b/tutorials/teams-to-azure-blob.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Teams → Azure Blob (Logic Apps)"
 author: "Puchun Niu"
-date: 2026-01-16
+date: 01/16/2026
 format: html
 editor: visual
 ---
@@ -131,5 +131,6 @@ Any new or modified file in the Teams library is automatically mirrored to:
 `bovianalyticsstorage` → container `bovianalytics-data` → `us/GEMs/{FilenameWithExtension}`
 
 Updates overwrite existing files, and new files are created reliably at very low cost.
+
 
 
